--- a/public/less/signup.less
+++ b/public/less/signup.less
@@ -1,4 +1,8 @@
 .navbar-signup {
-	background-color: rgba(0,0,0,0.1);
+	background: #e7e7e7 url('../img/bg.jpg') no-repeat;
 	border-bottom-color: rgba(150,150,150,1);
+	> .container-fluid {
+		background: rgba(0,0,0,0.05);
+	}
+	.navbar-brand { color: @gray-dark; }
 }
