--- a/module/Omelettes/view/partial/form/friendly.phtml
+++ b/module/Omelettes/view/partial/form/friendly.phtml
@@ -8,25 +8,25 @@ $form->setAttributes(array(
 	'class'		=> $form->getAttribute('name') . ' form-friendly',
 ));
 $form->prepare();
-echo $this->form()->openTag($form);
-
 ?>
-<?php foreach ($form as $element): ?>
-<?php if ($element instanceof Fieldset): ?>
-<?php echo $this->partial(
-		'partial/form/fieldset-friendly.phtml',
-		array(
-			'fieldset' => $element,
-			'leftColWidth'	=> 2,
-			'rightColWidth'	=> 4,
-			'unwrap' => true,
-		)); ?>
-<?php else: ?>
-<?php echo $this->partial(
-		'partial/form/element-friendly.phtml',
-		array(
-			'element'		=> $element,
-		)); ?>
-<?php endif; ?>
-<?php endforeach; ?>
-<?php echo $this->form()->closeTag($form); ?>
+<div class="row">
+	<div class="col-lg-6 col-lg-offset-3">
+	<?php echo $this->form()->openTag($form); ?>
+	<?php foreach ($form as $element): ?>
+	<?php if ($element instanceof Fieldset): ?>
+	<?php echo $this->partial(
+			'partial/form/fieldset-friendly.phtml',
+			array(
+				'fieldset' => $element,
+			)); ?>
+	<?php else: ?>
+	<?php echo $this->partial(
+			'partial/form/element-friendly.phtml',
+			array(
+				'element'		=> $element,
+			)); ?>
+	<?php endif; ?>
+	<?php endforeach; ?>
+	<?php echo $this->form()->closeTag($form); ?>
+	</div>
+</div>
