--- a/module/Tactile/view/partial/html-head.phtml
+++ b/module/Tactile/view/partial/html-head.phtml
@@ -5,7 +5,7 @@
 			->setAutoEscape(false);
 	?>
 		
-    	
+
 	<!-- Meta -->
 	<?php
 		echo $this->headMeta()
@@ -16,8 +16,8 @@
 
 	<!-- Styles and links -->
 	<?php
-		echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'));
-		echo $this->headLink()->prependStylesheet($this->basePath() . '/css/jquery-ui/jquery-ui.min.css')
+		echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+			->prependStylesheet('//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css')
 			->prependStylesheet($this->basePath() . '/css/compileLess.php');
 	?>
 		
