--- a/module/TactileAuth/view/tactile-auth/auth/forgot-password.phtml
+++ b/module/TactileAuth/view/tactile-auth/auth/forgot-password.phtml
@@ -1,6 +1,10 @@
-<?php echo $this->partial('page-title', array(
-	'title'		=> 'Reset your password',
-)); ?>
+<div class="row">
+	<div class="col-lg-6 col-lg-offset-3">
+		<?php echo $this->partial('page-title', array(
+			'title'		=> 'Request a password reset',
+		)); ?>
+	</div>
+</div>
 
 <?php echo $this->partial('partial/form/friendly.phtml', array('form' => $this->form)); ?>
 
