--- a/module/TactileAuth/view/tactile-auth/auth/login-theft-warning.phtml
+++ b/module/TactileAuth/view/tactile-auth/auth/login-theft-warning.phtml
@@ -1,8 +1,14 @@
 <h2 class="text-danger"><?php echo $this->translate('Warning! Your login cookie has been stolen!'); ?></h2>
-<p><?php echo $this->translate("You have been logged out because we have detected a possible attempt to access your account.
-This type of attack can happen if the security of your browser's cookies has been compromised."); ?></p>
-<h4><?php echo $this->translate('What should I do?'); ?></h4>
-<p><?php echo $this->translate("First of all, don't panic. Access to sensitive data and the ability to change your login details
-requires password authentication, so a cookie-thief has only limited access to your account,
-which will now have been revoked. It is recommended you ensure the integrity of the machine
-you are using before attempting to log back in."); ?></p>
+
+<div class="paper">
+	<h4><?php echo $this->translate('What?!'); ?></h4>
+	<p><?php echo $this->translate("You have been logged out because we have detected a login cookie conflict.
+	This may mean that your browser's cookies have been compromised, and that a third party has attempted to
+	access your Tactile CRM account."); ?></p>
+	
+	<h4><?php echo $this->translate('What should I do?'); ?></h4>
+	<p><?php echo $this->translate("Access to sensitive data and the ability to change your login details
+	requires password authentication, so a potential cookie-thief has only limited access to your account,
+	which will now have been revoked. It is recommended you ensure the integrity of the device
+	you are currently using before attempting to log back in. For further information, please contact Support."); ?></p>
+</div>
