--- a/module/TactileAuth/view/tactile-auth/auth/login.phtml
+++ b/module/TactileAuth/view/tactile-auth/auth/login.phtml
@@ -1,6 +1,10 @@
-<?php echo $this->partial('page-title', array(
-	'title'		=> 'Sign in',
-)); ?>
+<div class="row">
+	<div class="col-lg-6 col-lg-offset-3">
+		<?php echo $this->partial('page-title', array(
+			'title'		=> 'Sign in to Tactile CRM',
+		)); ?>
+	</div>
+</div>
 
 <?php echo $this->partial('form/friendly', array('form' => $this->form)); ?>
 
