--- a/module/Tactile/view/partial/html-head.phtml
+++ b/module/Tactile/view/partial/html-head.phtml
@@ -15,8 +15,9 @@
 		
 
 	<!-- Styles and links -->
+	<link rel="shortcut icon" type="image/vnd.microsoft.icon" sizes="16x16 24x24 32x32 64x64" href="<?php echo $this->basePath() . '/img/favicon.ico' ?>">
 	<?php
-		echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
+		echo $this->headLink()
 			->prependStylesheet('//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css')
 			->prependStylesheet($this->basePath() . '/css/compileLess.php');
 	?>
