--- a/module/Tactile/view/partial/html-head.phtml
+++ b/module/Tactile/view/partial/html-head.phtml
@@ -1,6 +1,6 @@
 <head>
 	<?php
-		echo $this->headTitle($this->translate('Omelett.es Application'))
+		echo $this->headTitle($this->translate('Tactile CRM'))
 			->setSeparator(' - ')
 			->setAutoEscape(false);
 	?>
@@ -15,7 +15,7 @@
 		
 
 	<!-- Styles and links -->
-	<link rel="shortcut icon" type="image/vnd.microsoft.icon" sizes="16x16 24x24 32x32 64x64" href="<?php echo $this->basePath() . '/img/favicon.ico' ?>">
+	<link rel="shortcut icon" type="image/vnd.microsoft.icon" sizes="16x16 24x24 32x32 64x64" href="<?php echo $this->basePath() . '/favicon.ico' ?>">
 	<?php
 		echo $this->headLink()
 			->prependStylesheet('//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css')
