--- a/module/Omelettes/view/partial/form/element-horizontal.phtml
+++ b/module/Omelettes/view/partial/form/element-horizontal.phtml
@@ -5,7 +5,7 @@
 		$element->setAttribute('class', 'form-control ' . $element->getAttribute('class'));
 	}
 ?>
-<div class="form-group<?php if ($this->formElementErrors($element)) echo " has-error"; ?>">
+<div class="form-group<?php if ($this->formElementErrors($element)) echo " has-error"; ?><?php if ($element->getOption('feedback')) echo " has-feedback"; ?>">
 	<?php echo $this->partial(
 			'partial/form/element-horizontal/' . $elementType . '.phtml',
 			array(
