Oh yeah auditing works baby

--- a/module/Tactile/view/partial/html-body-end.phtml
+++ b/module/Tactile/view/partial/html-body-end.phtml
@@ -1,5 +1,5 @@
 <!-- Body end scripts -->
 <?php
-	echo $this->inlineScript()->appendFile($this->basePath() . '/js/bootstrap.min.js')
-		->appendFile($this->basePath() . '/js/tactilecrm.js');
+	echo $this->inlineScript()->appendFile($this->basePath('/js/bootstrap.min.js'))
+		->appendFile($this->basePath('/js/tactilecrm/tactilecrm.js'));
 ?>
