--- a/public/less/omelettes.less
+++ b/public/less/omelettes.less
@@ -3,6 +3,7 @@
 
 .page-title {
 	.pagination { margin-top: 0; }
+	.pull-right:first-child .list-inline > li:last-child { padding-right: 0; }
 }
 
 form {
