--- a/public/less/tactilecrm.less
+++ b/public/less/tactilecrm.less
@@ -40,4 +40,5 @@ body {
 	border-radius: @border-radius-base;
 	.box-shadow(1px 1px 3px rgba(0,0,0,.175));
 	background-color: #fff;
+	margin-bottom: 1em;
 }
