Preparation work for smarter form instantiation, better form/filter relationships

--- a/module/Omelettes/view/partial/form/element-horizontal/static.phtml
+++ b/module/Omelettes/view/partial/form/element-horizontal/static.phtml
@@ -10,4 +10,7 @@
 		(<a href="<?php echo $element->getChangeUrl(); ?>"><?php echo $this->translate('Change'); ?></a>)
 		<?php endif; ?>
 	</p>
+	<?php if ($this->formElementErrors($element)): ?>
+	<span class="help-block"><?php echo $this->formElementErrors($element); ?></span>
+	<?php endif; ?>
 </div>
