--- a/module/Tactile/view/partial/html-head.phtml
+++ b/module/Tactile/view/partial/html-head.phtml
@@ -19,18 +19,18 @@
 	<?php
 		echo $this->headLink()
 			->prependStylesheet('//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/themes/smoothness/jquery-ui.min.css')
-			->prependStylesheet($this->basePath() . '/css/compileLess.php');
+			->prependStylesheet($this->basePath('/css/tactilecrm.css'));
 	?>
 		
 
 	<!-- Head Scripts -->
 	<?php
 		echo $this->headScript()
-			->prependFile($this->basePath() . '/js/respond.min.js', 'text/javascript', array('conditional' => 'lt IE 9',))
-			->prependFile($this->basePath() . '/js/html5shiv.js',   'text/javascript', array('conditional' => 'lt IE 9',))
+			->prependFile($this->basePath('/js/respond.min.js'), 'text/javascript', array('conditional' => 'lt IE 9',))
+			->prependFile($this->basePath('/js/html5shiv.js'),   'text/javascript', array('conditional' => 'lt IE 9',))
 			->appendFile('//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 			->appendFile('//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-			->appendFile($this->basePath() . '/js/omelettes.js');
+			->appendFile($this->basePath('/js/omelettes.js'));
 	?>
 		
 
