--- a/module/Omelettes/view/partial/form/element-horizontal/url.phtml
+++ b/module/Omelettes/view/partial/form/element-horizontal/url.phtml
@@ -1,7 +1,7 @@
-<?php if (!$unwrap): ?>
+<?php if ($leftColWidth || $rightColWidth): ?>
 <div class="col-lg-offset-<?php echo $leftColWidth; ?> col-lg-<?php echo $rightColWidth; ?>">
 <?php endif; ?>
 	<a class="<?php echo $element->getAnchorClass(); ?>" href="<?php echo $this->url($element->getRoute(), $element->getRouteOptions()); ?>"><?php echo $this->escapehtml($element->getValue()); ?></a>
-<?php if (!$unwrap): ?>
+<?php if ($leftColWidth || $rightColWidth): ?>
 </div>
 <?php endif; ?>
