--- a/public/css/tactilecrm.css
+++ b/public/css/tactilecrm.css
@@ -2114,8 +2114,8 @@ fieldset[disabled] .btn-primary.active {
 }
 .btn-success {
   color: #ffffff;
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #60bd20;
+  border-color: #55a71c;
 }
 .btn-success:hover,
 .btn-success:focus,
@@ -2123,8 +2123,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   color: #ffffff;
-  background-color: #47a447;
-  border-color: #398439;
+  background-color: #4e9a1a;
+  border-color: #3a7313;
 }
 .btn-success:active,
 .btn-success.active,
@@ -2146,11 +2146,11 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #5cb85c;
-  border-color: #4cae4c;
+  background-color: #60bd20;
+  border-color: #55a71c;
 }
 .btn-success .badge {
-  color: #5cb85c;
+  color: #60bd20;
   background-color: #ffffff;
 }
 .btn-info {
@@ -4288,11 +4288,11 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   background-color: #3071a9;
 }
 .label-success {
-  background-color: #5cb85c;
+  background-color: #60bd20;
 }
 .label-success[href]:hover,
 .label-success[href]:focus {
-  background-color: #449d44;
+  background-color: #4a9119;
 }
 .label-info {
   background-color: #5bc0de;
@@ -4536,7 +4536,7 @@ a.thumbnail.active {
   animation: progress-bar-stripes 2s linear infinite;
 }
 .progress-bar-success {
-  background-color: #5cb85c;
+  background-color: #60bd20;
 }
 .progress-striped .progress-bar-success {
   background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
@@ -5780,6 +5780,9 @@ button.close {
 }
 form .help-block:last-child {
   margin-bottom: 0;
+}
+form fieldset.submit a {
+  margin-left: 1em;
 }
 .navbar-signup {
   background: #e7e7e7 url('../img/bg.jpg') no-repeat;
