--- a/module/Tactile/view/tactile/contacts/view.phtml
+++ b/module/Tactile/view/tactile/contacts/view.phtml
@@ -8,6 +8,8 @@
 	<div class="col-lg-6">
 		<div class="paper">
 			<dl class="dl-horizontal">
+				<dt><?php echo $this->translate('Description'); ?></dt>
+				<dd><?php echo $this->prettyText($this->model->description); ?></dd>
 				<dt><?php echo $this->translate('Created'); ?></dt>
 				<dd><?php echo $this->prettyTime($this->model->created); ?></dd>
 			</dl>
