--- a/module/Tactile/view/tactile/contacts/index.phtml
+++ b/module/Tactile/view/tactile/contacts/index.phtml
@@ -4,6 +4,8 @@
 	'crud'		=> $this->crud,
 )); ?>
 
-<div class="paper">
-	<?php echo $this->tabulate($this->paginator); ?>
+<div class="panel panel-default">
+	<div class="panel-body">
+		<?php echo $this->tabulate($this->paginator); ?>
+	</div>
 </div>
