--- a/public/less/omelettes.less
+++ b/public/less/omelettes.less
@@ -12,3 +12,11 @@ form {
 		a { margin-left: 1em; }
 	}
 }
+
+dl.dl-inline {
+	dt, dd { display: inline-block; }
+}
+dl.authorship {
+	dt { font-weight: normal; }
+	dd { font-weight: bold; }
+}
