--- a/module/Tactile/view/tactile/contacts/add.phtml
+++ b/module/Tactile/view/tactile/contacts/add.phtml
@@ -1,7 +1,10 @@
 <?php echo $this->partial('page-title', array(
 	'title'		=> 'Add a new Contact',
+	'crud'		=> $this->crud,
 )); ?>
 
-<div class="paper">
-	<?php echo $this->partial('form/horizontal', array('form' => $this->form)); ?>
+<div class="panel panel-default">
+	<div class="panel-body">
+		<?php echo $this->partial('form/horizontal', array('form' => $this->form)); ?>
+	</div>
 </div>
