--- a/module/Omelettes/view/partial/page-title.phtml
+++ b/module/Omelettes/view/partial/page-title.phtml
@@ -9,5 +9,5 @@
 		<?php echo $this->navigation($this->crud)->menu()->setPartial('nav/buttons'); ?>
 	</div>
 	<?php endif; ?>
-	<h2><?php echo $this->escapehtml($this->title); ?></h2>
+	<h2 class="panel-title"><?php echo $this->escapehtml($this->title); ?></h2>
 </div>
