--- a/public/less/tactilecrm.less
+++ b/public/less/tactilecrm.less
@@ -6,6 +6,7 @@ body {
 	min-height: 600px;
 	background: #e7e7e7 url('../img/bg.jpg') no-repeat;
 	padding-top: 70px;
+	padding-bottom: 70px;
 }
 
 .navbar-logo {
@@ -32,11 +33,4 @@ body {
 }
 .navbar-inverse {
 	.navbar-brand { color: #fff; }
-}
-
-.panel {
-	.panel-body {
-		:first-child { margin-top: 0; }
-		:last-child { margin-bottom: 0; }
-	}
 }
