--- a/module/Tactile/view/partial/html-head.phtml
+++ b/module/Tactile/view/partial/html-head.phtml
@@ -30,8 +30,8 @@
 			->prependFile($this->basePath('/js/html5shiv.js'),   'text/javascript', array('conditional' => 'lt IE 9',))
 			->appendFile('//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
 			->appendFile('//ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
+			->appendFile($this->basePath('/js/omelettes/time.js'))
 			->appendFile($this->basePath('/js/omelettes.js'));
 	?>
-		
 
 </head>
