--- a/module/Tactile/view/tactile/contacts/edit.phtml
+++ b/module/Tactile/view/tactile/contacts/edit.phtml
@@ -1,9 +1,10 @@
-<?php echo $this->partial('page-title', array(
-	'title'		=> 'Edit ' . $this->model->name,
-	'crud'		=> $this->crud,
-)); ?>
-
 <div class="panel panel-default">
+	<div class="panel-heading">
+		<?php echo $this->partial('page-title', array(
+		'title'		=> $this->title,
+		'crud'		=> $this->crud,
+	)); ?>
+	</div>
 	<div class="panel-body">
 		<?php echo $this->partial('form/horizontal', array('form' => $this->form)); ?>
 	</div>
