--- a/module/Tactile/view/tactile/contacts/index.phtml
+++ b/module/Tactile/view/tactile/contacts/index.phtml
@@ -1,10 +1,11 @@
-<?php echo $this->partial('page-title', array(
-	'title'		=> 'All Contacts',
-	'paginator' => $this->paginator,
-	'crud'		=> $this->crud,
-)); ?>
-
 <div class="panel panel-default">
+	<div class="panel-heading">
+		<?php echo $this->partial('page-title', array(
+			'title'		=> $this->title,
+			'paginator' => $this->paginator,
+			'crud'		=> $this->crud,
+		)); ?>
+	</div>
 	<div class="panel-body">
 		<?php echo $this->tabulate($this->paginator); ?>
 	</div>
