--- a/module/Tactile/view/tactile/contacts/view.phtml
+++ b/module/Tactile/view/tactile/contacts/view.phtml
@@ -1,16 +1,12 @@
-<?php echo $this->partial('page-title', array(
-	'title' => $this->model->name,
-	'model' => $this->model,
-	'crud'	=> $this->crud,
-)); ?>
-
-<?php echo $this->partial('info/authorship', array('model' => $this->model)); ?>
-
 <div class="row">
 	<div class="col-lg-6">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h4 class="panel-title"><?php echo $this->translate('Information'); ?></h4>
+				<?php echo $this->partial('page-title', array(
+					'title' => $this->model->name,
+					'model' => $this->model,
+					'crud'	=> $this->crud,
+				)); ?>
 			</div>
 			<div class="panel-body">
 				<dl class="dl-horizontal">
@@ -21,13 +17,14 @@
 					<dt><?php echo $this->translate('Assigned To'); ?></dt>
 					<dd><?php echo $this->prettyUser($this->model->assigned_to); ?></dd>
 				</dl>
+				<div class="text-right"><?php echo $this->partial('info/authorship', array('model' => $this->model)); ?></div>
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-6">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h4 class="panel-title"><?php echo $this->translate('Contact History'); ?></h4>
+				<h2 class="panel-title"><?php echo $this->translate('Contact History'); ?></h2>
 			</div>
 			<div class="panel-body">
 			</div>
