--- a/module/Tactile/view/tactile/user/preferences.phtml
+++ b/module/Tactile/view/tactile/user/preferences.phtml
@@ -1,8 +1,9 @@
-<?php echo $this->partial('page-title', array(
-	'title'		=> 'User Preferences',
-)); ?>
-
 <div class="panel panel-default">
+	<div class="panel-heading">
+		<?php echo $this->partial('page-title', array(
+			'title'		=> $this->title,
+		)); ?>
+	</div>
 	<div class="panel-body">
 		<?php echo $this->partial('form/horizontal', array('form' => $this->form)); ?>
 	</div>
