--- a/module/TactileSignup/view/tactile-signup/signup/signup.phtml
+++ b/module/TactileSignup/view/tactile-signup/signup/signup.phtml
@@ -1,11 +1,15 @@
 <div class="row">
 	<div class="col-lg-6 col-lg-offset-3">
-		<?php echo $this->partial('page-title', array(
-			'title'		=> 'Create an account',
-		)); ?>
+		<div class="panel panel-default">
+			<div class="panel-heading">
+				<?php echo $this->partial('page-title', array(
+					'title'		=> $this->title,
+				)); ?>
+			</div>
+			<div class="panel-body">
+				<?php echo $this->partial('form/friendly', array('form' => $this->form)); ?>
+
+				<p class="text-center"><?php echo $this->translate("Already have an account?");?> <a class="" href="<?php echo $this->url('login'); ?>"><?php echo $this->translate('Sign in'); ?></a></p>
+			</div>
 	</div>
 </div>
-
-<?php echo $this->partial('form/friendly', array('form' => $this->form)); ?>
-
-<p class="text-center"><?php echo $this->translate("Already have an account?");?> <a class="" href="<?php echo $this->url('login'); ?>"><?php echo $this->translate('Sign in'); ?></a></p>
